editing html and javascript

--- a/index.html
+++ b/index.html
@@ -3,11 +3,38 @@
 <head>
   <meta charset="utf-8">
   <title>Rock, Paper, Scissors</title>
+  <script src="myscript.js" defer></script>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <script src="myscript.js">
-   
-  </script>
+<div class="container">
+
+  <div class="buttons">
+    <button class="rock" value="rock">ROCK</button>
+    <button class="paper" value="paper">PAPER</button>
+    <button class="scissors" value="scissors">SCISSORS</button>
+  </div>
+
+  <div class="hasil">
+    <div class="scores">
+      <div class="score-1">
+        <div class="player">Player</div>
+        <!-- <div class="player-score">0</div> -->
+      </div>
+      <div class="score-2">
+        <div class="comp">Computer</div>
+        <!-- <div class="comp-score">0</div> -->
+      </div>
+    </div>
+
+    <div class="text-results">
+      <!-- <div class="text-result-1">Placeholder 1</div> -->
+      <!-- <div class="text-result-2">Placeholder 2</div> -->
+    </div>
+  </div>
+
+</div>
+
 </body>
 </html>
